--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -2,14 +2,11 @@
 <head>
 <title>Roxen restarting</title>
 </head>
-<body background=/image/background.jpg bgcolor=#f0e0a0
-      text=#000000 link=#0000f0 vlink=#0000f0 alink=#00f000>
 
-<img src=/image/roxen.gif alt="Roxen restart">
-<hr noshade>
 
-<h1>Restart</h1>
-<font color=darkblue>
+<body bgcolor=#002050 text=#ffffff link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
+<font color=yellow><h1>Restart</h1></font>
+<font color=lightblue>
 Roxen will restart automatically.
 
 <p><i>You might see the old process for a while in the process table when
@@ -17,6 +14,5 @@ doing 'ps' or running 'top'. This is normal. Roxen waits for a while
 for all connections to finish, the process will go away after at most
 15 minutes.</i>
 </font>
-<hr noshade>
 </body>
 </html>
