--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -14,5 +14,11 @@ doing 'ps' or running 'top'. This is normal. Roxen waits for a while
 for all connections to finish, the process will go away after at most
 15 minutes.</i>
 </font>
+
+<p>
+
+To return to the configuration interface, just press "back". If roxen
+is back online, you should get the previous view.
+
 </body>
 </html>
