--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -5,6 +5,8 @@
 
 
 <body bgcolor=#002050 text=#ffffff link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
+<a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/%20Virtual%20servers%20 border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/%20Global%20variables%20 border=0></a><a href="/Status?849717040"><img alt="/Status info\_" src=/auto/unselected/%20Status%20info%20 border=0></a><a href="//?849717042"><img alt="/Error log\_" src=/auto/unselected/%20Error%20log%20 border=0></a>
+
 <font color=yellow><h1>Restart</h1></font>
 <font color=lightblue>
 Roxen will restart automatically.
