--- a/server/etc/config.html
+++ b/server/etc/config.html
@@ -1,15 +1,14 @@
+<blockquote>
 <h1><font size=+2>
 <br><b>Welcome to the configuration interface of Roxen Challenger.</b>
 </font></h1>
 <p>
-
 
 At the top of the page there are four other buttons.
 Pressing one of them will select that section of the configuation
 interface. Pressing the <em>selected</em> button will focus that part
 of the configuration interface on the top node of that part of the
 interface.  <p> It will probably make sense once you try it.  <p>
-
 
 <p>
 
@@ -23,3 +22,4 @@ configuration interface.
 
 Some buttons, like the 'add a new module' button are only available in
 certain nodes (a node of a certain type has been focused).
+</blockquote>
