--- a/server/etc/newconfig.html
+++ b/server/etc/newconfig.html
@@ -1,6 +1,7 @@
 <h2>Add a new virtual server</h2>
 <table cellpadding=10><tr><td bgcolor=#000000>
 <form>
+<font color=yellow>
 <pre>
 Server name:        <input name=name size=40,1>
 Configuration type: <select name=type>
@@ -10,6 +11,7 @@ Configuration type: <select name=type>
 <option>Proxy server
 $COPIES
 </select><input type=submit value="Add it!"></form></pre>
+</font>
 </td></table>
 <p>The only thing the type change is the initial configuration.
 <p>The types are:
