--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -4,23 +4,25 @@
 </head>
 
 
-<body bgcolor=#002050 text=#ffffff link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
+<body background=/image/background.gif bgcolor=#002050 text=#ffffff link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
 <a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/%20Virtual%20servers%20 border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/%20Global%20variables%20 border=0></a><a href="/Status?849717040"><img alt="/Status info\_" src=/auto/unselected/%20Status%20info%20 border=0></a><a href="//?849717042"><img alt="/Error log\_" src=/auto/unselected/%20Error%20log%20 border=0></a>
 
+
+<blockquote>
 <font color=yellow><h1>Restart</h1></font>
 <font color=lightblue>
 Roxen will restart automatically.
 
-<p><i>You might see the old process for a while in the process table when
-doing 'ps' or running 'top'. This is normal. Roxen waits for a while
-for all connections to finish, the process will go away after at most
-15 minutes.</i>
-</font>
+<p><i>You might see the old process for a while in the process table
+when doing 'ps' or running 'top'. This is normal. Roxen waits for a
+while for all connections to finish, the process will go away after at
+most 15 minutes.</i> </font>
 
 <p>
 
 To return to the configuration interface, just press "back". If roxen
 is back online, you should get the previous view.
+</blockquote>
 
 </body>
 </html>
