--- a/server/etc/shutdown.html
+++ b/server/etc/shutdown.html
@@ -2,22 +2,25 @@
 <head>
 <title>Roxen going down</title>
 </head>
+<blockquote>
 <!-- make it clear that this did indeed shutdown the server, it will not
      restart automatically (unless a very odd script is used to start the
      thing) -->
 
-<body bgcolor=#002050 text=#ffffff link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
+<body background=/image/background.gif bgcolor=#002050 text=#ffffff
+      link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
 
-<h1><font color=red size=7>Shutdown</font></h1>
+<h1><font color=yellow size=7>Shutdown</font></h1>
 
 <font color=#ffff00>
 To restart Roxen, cd to $PWD, and type './start' as the user who
 normally runs Roxen, or, if you use an /etc/init.d/ system, try
 /etc/init.d/roxen start
 
-<p>Roxen will <font size=+1 color=red><b>not</b></font> restart
+<p>Roxen will <font size=+1 color=yellow><b>not</b></font> restart
 automatically.
 </font>
 <p>
+</blockqupte>
 </body>
 </html>
