--- a/server/etc/welcome.html
+++ b/server/etc/welcome.html
@@ -1,28 +1,36 @@
 <br clear="">
-<base target="Roxen documentation">
+
 <h2><i>Welcome to Roxen Challenger!</i></h2>
 
 <p>
 
-If this is the first time you use Roxen, I suggest that you take a
-look at the <a href=http://roxen.com/configuration/>configuration help
-page</a>, preferably in another window. Read about the example
-configuration session there, before you configure this server.
+<p>
 
-<p>The first thing you will have to do is to set a user name and
+The first thing you will have to do is to set a user name and
 password. These will get you into the configuration interface when you
 want to configure the server later on.
 
-<p>You might also want to specify an IP-pattern. Then you may only
-configure the server from hosts whose IP-number match the pattern.
+<p>
 
-<p>If you have any questions or problems, first look at <a
-href=http://roxen.com/faq.html>the incomplete FAQ</a>, then
-check <a href=http://roxen.com/archive.lpc>the mailing list
-archive</a> (which is also <a
-href=http://roxen.com/search/>searchable</a>). You should
-also read the online documentation, of course. If you still have a
-problem, just send a mail to <a href=mailto:roxen@infovav.se>the
-Roxen mailinglist</a> and ask. You will be autosubscribed.
+If you have any questions or problems, first look at <a target="Roxen
+documentation" href=http://roxen.com/document/faq/>the incomplete
+FAQ</a>, then check <a target="Roxen documentation"
+href=http://teleute.infovav.se:1905/mlist.lpc>the mailing list
+archive</a> (The roxen site is also <a target="Roxen documentation"
+href=http://roxen.com/search/>searchable</a>).
+
+<p>
+
+You should also read the online documentation in the configuration
+interface (this is an example of online documentation) If you still
+have a problem, just send a mail to <a
+href=mailto:roxen@infovav.se>the Roxen mailinglist</a> and ask. You
+will be subscribed automatically if you send a mail to the list.
+
+<p>
+
+To get in touch with the developers, mail
+<a href=mailto:developers@roxen.com>developers@roxen.com</a>
+
 
 <p>
