--- a/server/etc/welcome.html
+++ b/server/etc/welcome.html
@@ -16,7 +16,7 @@ href=http://roxen.com/search/>searchable</a>).
 <p>You should also read the online documentation in the configuration
 interface (this is an example of online documentation) If you still
 have a problem, just send a mail to <a
-href=mailto:roxen@infovav.se>the Roxen mailinglist</a> and ask. You
+href=mailto:roxen@roxen.com>the Roxen mailinglist</a> and ask. You
 will be subscribed automatically if you send a mail to the list.
 
 <p>To get in touch with the developers, mail <a
