fixat lite layout
Rev: server/base_server/config/describers.pike:1.13
Rev: server/etc/config.html:1.5
Rev: server/etc/restart.html:1.8
Rev: server/etc/shutdown.html:1.5
Rev: server/etc/welcome.html:1.5

--- a/server/etc/config.html
+++ b/server/etc/config.html
@@ -1,7 +1,7 @@
 <h1><font size=+2>
-<br><b>Welcome to the configuration interface of Roxen Challenger.</b>
+<br>&nbsp;<b>Welcome to the configuration interface of Roxen Challenger.</b>
 </font></h1>
-<p>
+<blockquote><p>
 
 At the top of the page there are four other buttons.
 Pressing one of them will select that section of the configuation
