--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -23,5 +23,6 @@ most 15 minutes.</i> </font>
 To return to the configuration interface, just press "back". If roxen
 is back online, you should get the previous view.
 
+</blockquote>
 </body>
 </html>
