--- a/server/etc/shutdown.html
+++ b/server/etc/shutdown.html
@@ -9,6 +9,7 @@
 <body background=/image/background.gif bgcolor=#002050 text=#ffffff
       link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
 
+<blockquote>
 <h1><font color=yellow size=7>Shutdown</font></h1>
 
 <font color=#ffff00>
@@ -20,5 +21,6 @@ normally runs Roxen, or, if you use an /etc/init.d/ system, try
 automatically.
 </font>
 <p>
+</blockquote>
 </body>
 </html>
