--- a/server/etc/welcome.html
+++ b/server/etc/welcome.html
@@ -1,7 +1,7 @@
 <br clear="all">
 
-<h2><i>Welcome to Roxen Challenger!</i></h2>
-
+<h2>&nbsp;<i>Welcome to Roxen Challenger!</i></h2>
+<blockquote>
 <p>The first thing you will have to do is to set a user name and
 password. These will get you into the configuration interface when you
 want to configure the server later on.
@@ -24,3 +24,4 @@ href=mailto:developers@roxen.com>developers@roxen.com</a>
 
 
 <p>
+</blockquote>
