Added new virtual-server option: FTP
Rev: server/base_server/mainconfig.pike:1.44
Rev: server/etc/newconfig.html:1.5

--- a/server/etc/newconfig.html
+++ b/server/etc/newconfig.html
@@ -6,6 +6,7 @@
 Server name:        <input name=name size=40,1>
 Configuration type: <select name=type>
 <option>Bare bones
+<option>FTP server
 <option>IPP customer configuration
 <option selected>Standard configuration
 <option>Proxy server
