--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -4,13 +4,13 @@
 </head>
 
 
-<body background=/image/background.gif bgcolor=#002050 text=#ffffff link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
-<a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/%20Virtual%20servers%20 border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/%20Global%20variables%20 border=0></a><a href="/Status?849717040"><img alt="/Status info\_" src=/auto/unselected/%20Status%20info%20 border=0></a><a href="/Errors/?849717042"><img alt="/Error log\_" src=/auto/unselected/%20Error%20log%20 border=0></a>
+<body bgcolor=white text=black link=0x000044 vlink=0x000044 alink=red>
+<a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/%20Virtual%20servers%20 border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/%20Global%20variables%20 border=0></a><a href="/Status?849717040"><img alt="/Status info\_" src=/auto/unselected/%20Status%20info%20 border=0></a><a href="/Errors/?849717042"><img alt="/Error log\_" src=/auto/unselected/%20Event%20log%20 border=0></a>
 
 
 <blockquote>
-<font color=yellow><h1>Restart</h1></font>
-<font color=lightblue>
+<font color=darkred><h1>Restart</h1></font>
+<font color=darkblue>
 Roxen will restart automatically.
 
 <p><i>You might see the old process for a while in the process table
