--- a/server/etc/shutdown.html
+++ b/server/etc/shutdown.html
@@ -6,13 +6,12 @@
      restart automatically (unless a very odd script is used to start the
      thing) -->
 
-<body background=/image/background.gif bgcolor=#002050 text=#ffffff
-      link=#ffffaa vlink=#ffffaa alink=#f0e0f0>
+<body bgcolor=white text=black link=0x000044 vlink=0x000044 alink=red>
 
 <blockquote>
-<h1><font color=yellow size=7>Shutdown</font></h1>
+<h1><font color=red size=7>Shutdown</font></h1>
 
-<font color=#ffff00>
+<font color=darkred>
 To restart Roxen, cd to $PWD, and type './start' as the user who
 normally runs Roxen, or, if you use an /etc/init.d/ system, try
 /etc/init.d/roxen start
