--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -5,7 +5,7 @@
 
 
 <body bgcolor=white text=black link=0x000044 vlink=0x000044 alink=red>
-<a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/%20Virtual%20servers%20 border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/%20Global%20variables%20 border=0></a><a href="/Status?849717040"><img alt="/Status info\_" src=/auto/unselected/%20Status%20info%20 border=0></a><a href="/Errors/?849717042"><img alt="/Error log\_" src=/auto/unselected/%20Event%20log%20 border=0></a>
+<a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/Virtual%20servers border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/Global%20variables border=0></a><a href="/Status?849717040"><img alt="/Status\_" src=/auto/unselected/Status border=0></a><a href="/Errors/?849717042"><img alt="/Events\_" src=/auto/unselected/Events border=0></a><a href="/Actions?849717042"><img alt="/Actions\_" src=/auto/unselected/Actions border=0></a>
 
 
 <blockquote>
