- "Statusbar" added to restart and shutdown pages. - Shutdown and restart delayed 5 seconds to minimize the number of   broken pictures you might get if configuring a remote server over a   not-so-fast connection. - Roxen capitalized in the shutdown action.
Rev: server/base_server/roxen.pike:1.97
Rev: server/etc/restart.html:1.12
Rev: server/etc/shutdown.html:1.7

--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -5,6 +5,12 @@
 
 
 <body bgcolor=white text=black link=0x000044 vlink=0x000044 alink=red>
+<table width="100%" bgcolor="#dddddd" border=0 cellpadding=0
+cellspacing=0><tr><td valign=middle align=left><a
+href="$docurl"><img border=0 src="/image/roxen-small.gif"
+alt="Roxen"></a></td><td align=right valign=middle>
+<b>Restarting server...</b></td><td>&nbsp;</td></tr></table><br>
+
 <a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/Virtual%20servers border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/Global%20variables border=0></a><a href="/Status?849717040"><img alt="/Status\_" src=/auto/unselected/Status border=0></a><a href="/Errors/?849717042"><img alt="/Events\_" src=/auto/unselected/Events border=0></a><a href="/Actions?849717042"><img alt="/Actions\_" src=/auto/unselected/Actions border=0></a>
 
 
