--- a/server/etc/shutdown.html
+++ b/server/etc/shutdown.html
@@ -7,6 +7,11 @@
      thing) -->
 
 <body bgcolor=white text=black link=0x000044 vlink=0x000044 alink=red>
+<table width="100%" bgcolor="#dddddd" border=0 cellpadding=0
+cellspacing=0><tr><td valign=middle align=left><a
+href="$docurl"><img border=0 src="/image/roxen-small.gif"
+alt="Roxen"></a></td><td align=right valign=middle>
+<b>Server is shut down.</b></td><td>&nbsp;</td></tr></table><br>
 
 <blockquote>
 <h1><font color=red size=7>Shutdown</font></h1>
@@ -14,9 +19,9 @@
 <font color=darkred>
 To restart Roxen, cd to $PWD, and type './start' as the user who
 normally runs Roxen, or, if you use an /etc/init.d/ system, try
-/etc/init.d/roxen start
+/etc/init.d/roxen start.
 
-<p>Roxen will <font size=+1 color=yellow><b>not</b></font> restart
+<p>Roxen will <font size=+1 color=red><b>not</b></font> restart
 automatically.
 </font>
 <p>
