Some cosmetic changes.
Rev: server/etc/config.html:1.6

--- a/server/etc/config.html
+++ b/server/etc/config.html
@@ -3,16 +3,20 @@
 </font></h1>
 <blockquote><p>
 
-At the top of the page there are four other buttons.
+At the top of the page there are five buttons.
 Pressing one of them will select that section of the configuation
 interface. Pressing the <em>selected</em> button will focus that part
 of the configuration interface on the top node of that part of the
-interface.  <p> It will probably make sense once you try it.  <p>
+interface.
+
+<p>
+
+It will probably make sense once you try it.
 
 <p>
 
 There are usually one or more buttons at the bottom of the page, to do
-things that does not fit nicely in the 'node with subnodes'
+things that do not fit nicely in the 'node with subnodes'
 methaphore, like adding a new virtual server, unfolding/folding more
 than one node at the time etc, at the top or bottom of the
 configuration interface.
