Fixes to the layout
Rev: server/base_server/config/describers.pike:1.38
Rev: server/base_server/config/low_describers.pike:1.11
Rev: server/base_server/configuration.pike:1.58
Rev: server/base_server/mainconfig.pike:1.72
Rev: server/base_server/roxen.pike:1.103
Rev: server/base_server/roxenloader.pike:1.33
Rev: server/etc/config.html:1.7
Rev: server/etc/welcome.html:1.7
Rev: server/modules/scripting/cgi.pike:1.34

--- a/server/etc/welcome.html
+++ b/server/etc/welcome.html
@@ -1,25 +1,19 @@
-<br clear="all">
-
-<h2>&nbsp;<i>Welcome to Roxen Challenger!</i></h2>
-<blockquote>
-<p>The first thing you will have to do is to set a user name and
-password. These will get you into the configuration interface when you
-want to configure the server later on.
+<img src=/image/roxen-source-inside.gif align=right spacing=20>
+<font size=+4 face="new century schoolbook"><b>Welcome!</b></font>
+<br>
+<br>
+<br>
+<p>The first thing you will have to do is to set a user
+name and password. These will get you into the configuration interface
+when you want to configure the server later on.
 
 <p>If you have any questions or problems, first look at <a
-target="Roxen documentation" href=http://www.roxen.com/documentation/manuals/>the
-documentation</a>, then check <a target="Roxen documentation"
-href=http://teleute.infovav.se:1905/mlist.lpc>the mailing list
-archive</a>.
-
-<p>You should also read the online documentation in the configuration
-interface (this is an example of online documentation) If you still
-have a problem, just send a mail to <a
-href=mailto:roxen@roxen.com>the Roxen mailinglist</a> and ask.
-
-<p>To get in touch with the developers, mail <a
-href=mailto:developers@roxen.com>developers@roxen.com</a>
-
-
+target="Roxen documentation"
+href=http://www.roxen.com/documentation/manuals/>the
+documentation</a>.
 <p>
-</blockquote>
+<br>
+<br>
+<br>
+<br>
+<center>
