--- a/server/etc/config.html
+++ b/server/etc/config.html
@@ -1,17 +1,12 @@
-<h1><font size=+2>
-<br>&nbsp;<b>Welcome to the configuration interface of Roxen Challenger.</b>
-</font></h1>
-<blockquote><p>
+<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.gif align=right xspacing=20></a>
+<br>
 
-At the top of the page there are five buttons.
-Pressing one of them will select that section of the configuation
-interface. Pressing the <em>selected</em> button will focus that part
-of the configuration interface on the top node of that part of the
-interface.
-
-<p>
-
-It will probably make sense once you try it.
+Pressing one of the tabs at the top of the page will select that
+section of the configuation interface. Pressing the <em>selected</em>
+button will focus on the top node of that part of the interface.<p> It
+will probably make sense once you try it. You can always see where in
+the configuration interface you are by looking at the grey statusrow
+at the top of the page.  <p>
 
 <p>
 
@@ -24,5 +19,5 @@ configuration interface.
 <p>
 
 Some buttons, like the 'add a new module' button are only available in
-certain nodes (a node of a certain type has been focused).
-</blockquote>
+certain nodes (when a node of a certain type has been focused).
+
