--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -6,7 +6,7 @@
 <body bgcolor=white text=black link=darkblue vlink=black alink=red>
 <table width="100%" bgcolor="#dddddd" border=0 cellpadding=0
 cellspacing=0><tr><td valign=middle align=left><a
-href="$docurl"><img border=0 src="internal-roxen-roxen-icon-gray"
+href="$docurl"><img border=0 src="/image/roxen-icon-gray.gif"
 alt="Roxen"></a></td><td align=right valign=middle>
 <b>Restarting server...</b></td><td>&nbsp;</td></tr></table><br>
 
