--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -1,3 +1,7 @@
+<!-- $Id: restart.html,v 1.15 1997/08/30 15:57:44 peter Exp $
+     name="Roxen Restart Page";
+     doc="The page displayed when Roxen is restarted";
+  -->
 <html>
 <head>
 <title>Roxen restarting</title>
