--- a/server/etc/shutdown.html
+++ b/server/etc/shutdown.html
@@ -1,3 +1,7 @@
+<!-- $Id: shutdown.html,v 1.8 1997/08/30 15:57:44 peter Exp $
+     name="Roxen Shutdown Page";
+     doc="The page displayed when Roxen is shut down";
+  -->
 <html>
 <head>
 <title>Roxen going down</title>
