--- a/server/etc/welcome.html
+++ b/server/etc/welcome.html
@@ -1,3 +1,7 @@
+<!-- $Id: welcome.html,v 1.8 1997/08/30 15:57:46 peter Exp $
+     name="Roxen Welcome Page";
+     doc="The page with the password form";
+  -->
 <img src=/image/roxen-source-inside.gif align=right spacing=20>
 <font size=+4 face="new century schoolbook"><b>Welcome!</b></font>
 <br>
