--- a/server/etc/config.html
+++ b/server/etc/config.html
@@ -1,3 +1,7 @@
+<!-- $Id: config.html,v 1.8 1997/08/30 16:08:39 peter Exp $
+     name="Roxen First Page";
+     doc="The page with the documentation for the configuration interface";
+  -->
 <a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.gif align=right xspacing=20></a>
 <br>
 
