--- a/server/etc/shutdown.html
+++ b/server/etc/shutdown.html
@@ -1,4 +1,4 @@
-<!-- $Id: shutdown.html,v 1.9 1997/08/30 23:01:08 peter Exp $
+<!-- $Id: shutdown.html,v 1.10 1997/08/31 21:54:26 peter Exp $
      name="Roxen Shutdown Page";
      doc="The page displayed when Roxen is shut down";
   -->
@@ -13,7 +13,7 @@
 <body bgcolor=white text=black link=0x000044 vlink=0x000044 alink=red>
 <table width="100%" bgcolor="#dddddd" border=0 cellpadding=0
 cellspacing=0><tr><td valign=middle align=left><a
-href="$docurl"><img border=0 src="/image/roxen-icon-gray.gif"
+href="$docurl"><img border=0 src="/image/roxen-small.gif"
 alt="Roxen"></a></td><td align=right valign=middle>
 <b>Server is shut down.</b></td><td>&nbsp;</td></tr></table><br>
 
