Updated to new config-interface.
Rev: server/etc/restart.html:1.17
Rev: server/etc/shutdown.html:1.11

--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -1,4 +1,4 @@
-<!-- $Id: restart.html,v 1.16 1997/08/30 23:01:07 peter Exp $
+<!-- $Id: restart.html,v 1.17 1997/10/18 20:46:37 grubba Exp $
      name="Roxen Restart Page";
      doc="The page displayed when Roxen is restarted";
   -->
@@ -8,11 +8,16 @@
 </head>
 
 <body bgcolor=white text=black link=darkblue vlink=black alink=red>
-<table width="100%" bgcolor="#dddddd" border=0 cellpadding=0
-cellspacing=0><tr><td valign=middle align=left><a
+<table width="100%" border=0 cellpadding=0 cellspacing=0>
+<tr><td valign=bottom align=left><a
 href="$docurl"><img border=0 src="/image/roxen-icon-gray.gif"
-alt="Roxen"></a></td><td align=right valign=middle>
-<b>Restarting server...</b></td><td>&nbsp;</td></tr></table><br>
+alt="Roxen"></a></td><td>&nbsp;</td>
+<td width=100% height=39><table cellpadding=0 cellspacing=0 width=100% border=0>
+<tr width=100%><td width=100% align=right valign=center height=28>
+<b>Restarting server...</b></td></tr>
+<tr width=100%><td bgcolor="#003366" align=right height=12 width="100%"
+><font color=white size=-2>Administration Interface</font></td></tr>
+</table></td></tr></table></br>
 
 <a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/Virtual%20servers border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/Global%20variables border=0></a><a href="/Errors/?849717042"><img alt="/Events\_" src=/auto/unselected/Events border=0></a><a href="/Actions?849717042"><img alt="/Actions\_" src=/auto/unselected/Actions border=0></a>
 
