--- a/server/etc/shutdown.html
+++ b/server/etc/shutdown.html
@@ -1,4 +1,4 @@
-<!-- $Id: shutdown.html,v 1.11 1997/10/18 20:46:55 grubba Exp $
+<!-- $Id: shutdown.html,v 1.12 1997/10/18 20:47:35 grubba Exp $
      name="Roxen Shutdown Page";
      doc="The page displayed when Roxen is shut down";
   -->
@@ -11,14 +11,14 @@
      server) -->
 
 <body bgcolor=white text=black link=darkblue vlink=black alink=red>
-<table width="100%" border=0 cellpadding=0 cellspacing=0>
+<table width=100% border=0 cellpadding=0 cellspacing=0>
 <tr><td valign=bottom align=left><a
 href="$docurl"><img border=0 src="/image/roxen-icon-gray.gif"
 alt="Roxen"></a></td><td>&nbsp;</td>
 <td width=100% height=39><table cellpadding=0 cellspacing=0 width=100% border=0>
-<tr width="100%"><td width="100%" align=right valigh=center height=28>
+<tr width=100%><td width=100% align=right valigh=center height=28>
 <b>Server is shut down.</b></td></tr>
-<tr width=100%><td bgcolor="#003366" align=right height=12 width="100%"
+<tr width=100%><td bgcolor="#003366" align=right height=12 width=100%
 ><font color=white size=-2>Administration Interface</font></td></tr>
 </table></td></tr></table><br>
 
