--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -1,4 +1,4 @@
-<!-- $Id: restart.html,v 1.17 1997/10/18 20:46:37 grubba Exp $
+<!-- $Id: restart.html,v 1.18 1997/10/18 20:48:06 grubba Exp $
      name="Roxen Restart Page";
      doc="The page displayed when Roxen is restarted";
   -->
@@ -15,7 +15,7 @@ alt="Roxen"></a></td><td>&nbsp;</td>
 <td width=100% height=39><table cellpadding=0 cellspacing=0 width=100% border=0>
 <tr width=100%><td width=100% align=right valign=center height=28>
 <b>Restarting server...</b></td></tr>
-<tr width=100%><td bgcolor="#003366" align=right height=12 width="100%"
+<tr width=100%><td bgcolor="#003366" align=right height=12 width=100%
 ><font color=white size=-2>Administration Interface</font></td></tr>
 </table></td></tr></table></br>
 
