--- a/server/etc/config.html
+++ b/server/etc/config.html
@@ -1,8 +1,8 @@
-<!-- $Id: config.html,v 1.8 1997/08/30 16:08:39 peter Exp $
+<!-- $Id: config.html,v 1.9 1997/12/14 23:08:11 grubba Exp $
      name="Roxen First Page";
      doc="The page with the documentation for the configuration interface";
   -->
-<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.gif align=right xspacing=20></a>
+<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.jpg align=right xspacing=20></a>
 <br>
 
 Pressing one of the tabs at the top of the page will select that
