Legal mumbo jumbo
Rev: server/etc/config.int.html:1.2

--- a/server/etc/config.int.html
+++ b/server/etc/config.int.html
@@ -1,8 +1,8 @@
-<!-- $Id: config.int.html,v 1.1 1997/12/15 01:32:48 peter Exp $
+<!-- $Id: config.int.html,v 1.2 1997/12/15 01:47:02 peter Exp $
      name="Roxen First Page";
      doc="The page with the documentation for the config interface, Int";
   -->
-<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.gif align=right xspacing=20></a>
+<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.jpg align=right xspacing=20></a>
 <br>
 
 <b>This version, 1.2 Int, of Roxen<font size=-2><sup>TM</sup></font>
