--- a/server/etc/welcome.html
+++ b/server/etc/welcome.html
@@ -1,8 +1,8 @@
-<!-- $Id: welcome.html,v 1.8 1997/08/30 15:57:46 peter Exp $
+<!-- $Id: welcome.html,v 1.9 1997/12/15 20:01:59 peter Exp $
      name="Roxen Welcome Page";
      doc="The page with the password form";
   -->
-<img src=/image/roxen-source-inside.gif align=right spacing=20>
+<img src=/image/roxen-source-inside.jpg align=right spacing=20>
 <font size=+4 face="new century schoolbook"><b>Welcome!</b></font>
 <br>
 <br>
