--- a/server/etc/welcome.html
+++ b/server/etc/welcome.html
@@ -1,4 +1,4 @@
-<!-- $Id: welcome.html,v 1.9 1997/12/15 20:01:59 peter Exp $
+<!-- $Id: welcome.html,v 1.10 1998/06/29 15:39:23 grubba Exp $
      name="Roxen Welcome Page";
      doc="The page with the password form";
   -->
@@ -13,8 +13,7 @@ when you want to configure the server later on.
 
 <p>If you have any questions or problems, first look at <a
 target="Roxen documentation"
-href=http://www.roxen.com/documentation/manuals/>the
-documentation</a>.
+href=http://www.roxen.com/documentation/>the documentation</a>.
 <p>
 <br>
 <br>
