Updated Kinkie's email-address.
Rev: examples/sqluserdb/documentation.html:1.2

--- a/examples/sqluserdb/documentation.html
+++ b/examples/sqluserdb/documentation.html
@@ -20,7 +20,7 @@ ftp://ftp.roxen.com/pub/roxen/contrib/</A> or<BR>
 <H2 align=center>Copyright and Disclaimer of Warranty</H2>
 This software and the accompanying documentation are &copy; 1997
 Francesco Chemolli 
-&lt;<A href="mailto:kinkie@comedia.it">kinkie@comedia.it</A>&gt;.
+&lt;<A href="mailto:kinkie@kame.usr.dsi.unimi.it">kinkie@kame.usr.dsi.unimi.it</A>&gt;.
 Use, reproduction and distribution are allowed
 under the terms of the GNU General Public License version 2 or, at
 your option, any later version. Use of the software implies you know
@@ -176,7 +176,7 @@ If you're VERY SURE everything is fine, try to uncomment the
 <CODE>#define SQLAUTHDEBUG</CODE> line at the beginning of the module and
 reload the module.
 This will produce a lot of debugging output in the default.1 file.<BR>
-Should everything else fail, <A href="mailto:kinkie@comedia.it">send me</A>
+Should everything else fail, <A href="mailto:kinkie@kame.usr.dsi.unimi.it">send me</A>
 a mail trying to describe exactly what the problem is and I'll see what
 I can do.
 
@@ -185,13 +185,13 @@ This module, accompanying documentation and tools are <B>free software</B>.
 That means, you can use, copy, distribute them freely. Money donations to
 the author are of course welcome, but not required. My oversized ego
 however forces me to ask you to 
-<A href="mailto:kinkie@comedia.it">write me</A> if you find this program
+<A href="mailto:kinkie@kame.usr.dsi.unimi.it">write me</A> if you find this program
 useful. This will not make me richer, but will for sure encourage me to
 write more, better software, and won't cost you one bit ^_^<BR>
 I hope my work will be useful, and to hear from you soon.<P>
 <DIV align=right>
 Sincerely,<BR>
-<ADDRESS><A href="mailto:kinkie@comedia.it">Francesco Chemolli</A></ADDRESS>
+<ADDRESS><A href="mailto:kinkie@kame.usr.dsi.unimi.it">Francesco Chemolli</A></ADDRESS>
 </DIV>
 
 </BODY></HTML>
