--- a/modules/admin/tabs/15:DNS_Configuration/page.html
+++ b/modules/admin/tabs/15:DNS_Configuration/page.html
@@ -20,11 +20,10 @@
               cellpadding=0 cellspacing=0>
       <form method=post>
         <input type=hidden name=id value=#id#>
-        <uservar title='Customer name:' type=text size=40 name=name>
-        <uservar title='Login name:' type=text size=20 name=user_id>
-        <uservar title='Password:' type=password size=20 name=password>
-	<input type=submit name=save value='Save'>
+        <uservar title='Domain name:' type=text size=40 name=domain>
+	<input type=submit name=save value='Apply and reload'>
       </form>
     </preparse>
+    Note that www.[domainname] is registered too.
   </preparse>
 </formoutput>  
